--- a/sites/configurations/scvo/partials/related-posts.hbs
+++ b/sites/configurations/scvo/partials/related-posts.hbs
@@ -1,6 +1,6 @@
 {{#compare @root.data.supplimentaryResponses.related_posts.hits.total ">" 0 ~}}
 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
-  <h3 class="blogs">Related posts</h3>
+  <h3 class="blogs">{{default title "Related posts"}}</h3>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       {{#each @root.data.supplimentaryResponses.related_posts.hits.hits ~}}
