Moved MDE and other stuff over to assets. Fixed tab issue

--- a/sites/configurations/goodmoves/partials/components/tab-bar.hbs
+++ b/sites/configurations/goodmoves/partials/components/tab-bar.hbs
@@ -1,4 +1,6 @@
-<div class="mdc-tab-bar {{extraClasses}}" {{#if id}}id="{{id}}"{{/if}} role="tablist" data-mdc-auto-init"MDCTabBar">
+<div class="mdc-tab-bar {{extraClasses}}" {{#if id}}id="{{id}}"{{/if}} role="tablist" data-tab-bar='{
+      "defaultTabIdentifier": {{{stringify (default defaultTabIdentifier null)}}}
+    }'>
   <div class="mdc-tab-scroller">
     <div class="mdc-tab-scroller__scroll-area">
       <div class="mdc-tab-scroller__scroll-content">
