--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -5,7 +5,7 @@
 
   <div class="goodmoves-vacancy">
     {{#each @root.data.primaryResponse.hits.hits ~}}
-      {{> vacancy_full _source}}
+      {{~> vacancy_full _source~}}
     {{/each ~}}
   </div>
 
