--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
@@ -1,66 +1,6 @@
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script type="text/javascript">
-if (window.location.hash) {
-  var hash = window.location.hash.replace('#', '');
-  var tab = $('[aria-controls="' + hash + '"]');
-  if (tab.length > 0) {
-    tab.addClass('mdc-tab--active');
-    var panel = $('#' + tab.attr('aria-controls')).addClass('panel--active');
-    var activeTab = tab.siblings('.mdc-tab--active');
-    if (activeTab[0]) {
-      var activePanel = $('#' + activeTab.attr('aria-controls'));
-      activeTab.removeClass('mdc-tab--active');
-      activePanel.removeClass('panel--active');
-    }
-  }
-}
-
-var tabs = new mdc.tabs.MDCTabBar(document.querySelector("#vacancy-tab-bar"));
-var panels = document.querySelector(".panels");
-tabs.preventDefaultOnClick = true;
-function updatePanel(index) {
-  var activePanel = panels.querySelector(".panel.panel--active");
-  if (activePanel) {
-    activePanel.classList.remove("panel--active");
-  }
-  var newActivePanel = panels.querySelector(
-    ".panel:nth-child(" + (index + 1) + ")"
-  );
-  if (newActivePanel) {
-    newActivePanel.classList.add("panel--active");
-  }
-}
-tabs.listen("MDCTabBar:change", function(t) {
-  var tabs = t.detail;
-  var nthChildIndex = tabs.activeTabIndex;
-  updatePanel(nthChildIndex);
-  if (goodmoves.maps.vacancyMap) {
-    window.setTimeout(function() {
-      var map = goodmoves.maps.vacancyMap;
-      map.invalidateSize();
-    }, 0);
-  }
-  if (mdeEditors.length > 0) {
-    window.setTimeout(function() {
-      mdeEditors.forEach(function(editor) {
-        editor.codemirror.refresh();
-      });
-    }, 0);
-  }
-});
-
-var mdeEditors = [];
+<script>
 $(document).ready(function() {
 {{#if data.auth}}
-  $('textarea[data-simple-mde]').each(function(i, o) {
-    var mdeEditor = new SimpleMDE({
-      element: o,
-      forceSync: true,
-      toolbar: ["heading-1", "heading-2", "bold", "italic", "|", "unordered-list", "ordered-list", "link"]
-    });
-    o.mde = mdeEditor;
-    mdeEditors.push(mdeEditor);
-  });
   var recentlyViewed = goodmoves.getCookie('recently_viewed') || '';
   console.log('Recently Viewed:', recentlyViewed, '| Vacancy Id:', vacancyId);
   recentlyViewed = recentlyViewed.split(',');
