--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -149,8 +149,8 @@ if(location.host.indexOf('.local') > -1){
               </span>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
-              {{#>components_tab_bar 
-                  extraClasses="mdc-tab-bar__auto-width hide-sm hide-md" 
+              {{#>components_tab_bar
+                  extraClasses="mdc-tab-bar__auto-width hide-sm hide-md"
                   id="upper-tab-bar"}}
                 {{#if @root.data.auth ~}}
                   {{#each @root.context.metaData.menus.upper-signed-in ~}}
@@ -234,18 +234,18 @@ if(location.host.indexOf('.local') > -1){
       </header>
 
       <aside class="mdc-drawer mdc-drawer--modal" id="mobile-menu" data-mdc-auto-init="MDCDrawer">
-        <div class="mdc-drawer__header">
+        <!-- <div class="mdc-drawer__header">
           <h3 class="mdc-drawer__title">Goodmoves</h3>
-        </div>
+        </div> -->
         <div class="mdc-drawer__content">
           <nav class="mdc-list">
-            <a class="mdc-list-item {{#compare @root.request.url.pathname "/"}} mdc-list-item--activated{{/compare}}" 
+            <a class="mdc-list-item {{#compare @root.request.url.pathname "/"}} mdc-list-item--activated{{/compare}}"
                href="/" {{#compare @root.request.url.pathname "/"}}aria-selected="true"{{else}}aria-hidden="true"{{/compare}}>
               <span class="far fa-home mdc-list-item__graphic" aria-hidden="true"></span>
-              Home 
+              Home
             </a>
             {{#each @root.context.metaData.menus.main ~}}
-            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" 
+            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}"
                href="{{stripTrailingSlash path}}" {{#if (regexMatch @root.request.url.pathname route "gi")}}aria-selected="true"{{else}}aria-hidden="true"{{/if}}>
               {{#if icon ~}}
               <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
@@ -254,7 +254,7 @@ if(location.host.indexOf('.local') > -1){
             </a>
             {{/each ~}}
             {{#each @root.context.metaData.menus.main-extra ~}}
-            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" 
+            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}"
                href="{{stripTrailingSlash path}}" {{#if (regexMatch @root.request.url.pathname route "gi")}}aria-selected="true"{{else}}aria-hidden="true"{{/if}}>
               {{#if icon ~}}
               <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
@@ -267,7 +267,7 @@ if(location.host.indexOf('.local') > -1){
             {{#each @root.context.metaData.menus.user-signed-in ~}}
             {{#compare path "===" "/" ~}}
             {{else}}
-            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" 
+            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}"
                href="{{stripTrailingSlash path}}" {{#if (regexMatch @root.request.url.pathname route "gi")}}aria-selected="true"{{else}}aria-hidden="true"{{/if}}>
               {{#if icon ~}}
               <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
@@ -278,7 +278,7 @@ if(location.host.indexOf('.local') > -1){
             {{/each ~}}
             {{else}}
             {{#each @root.context.metaData.menus.user-not-signed-in ~}}
-            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" 
+            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}"
                href="{{stripTrailingSlash path}}" {{#if (regexMatch @root.request.url.pathname route "gi")}}aria-selected="true"{{else}}aria-hidden="true"{{/if}}>
               {{#if icon ~}}
               <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
@@ -290,9 +290,9 @@ if(location.host.indexOf('.local') > -1){
           </nav>
         </div>
       </aside>
-      
+
       <div class="mdc-drawer-scrim"></div>
-      
+
       <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
         {{#if layoutParts.sidebar }}
         <aside class="mdc-drawer mdc-elevation--z3 mdc-drawer--occasional" id="sidebar-temporary" data-menu-button="#sidebar-button">
@@ -429,19 +429,19 @@ if(location.host.indexOf('.local') > -1){
   try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
   catch(e){window.attachEvent("onload", $buo_f)}
   </script>
-  <!--<script type="text/javascript" 
-      id="cookieinfo" 
-      src="/assets/js/cookieinfo.min.js" 
-      data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." 
-      data-font-family="'Open Sans',Helvetica,Arial,sans-serif" 
-      data-bg="#fff" 
-      data-link="#42842A" 
-      data-divlink="#fff" 
-      data-divlinkbg="#42842A" 
-      data-position="bottom" 
-      data-accept-on-scroll="true" 
-      data-moreinfo="/cookies" 
-      data-cookie="CookieInfoScript" 
+  <!--<script type="text/javascript"
+      id="cookieinfo"
+      src="/assets/js/cookieinfo.min.js"
+      data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies."
+      data-font-family="'Open Sans',Helvetica,Arial,sans-serif"
+      data-bg="#fff"
+      data-link="#42842A"
+      data-divlink="#fff"
+      data-divlinkbg="#42842A"
+      data-position="bottom"
+      data-accept-on-scroll="true"
+      data-moreinfo="/cookies"
+      data-cookie="CookieInfoScript"
       data-text-align="left"
       ></script>-->
   <script type="text/javascript" src="/assets/goodmoves/main.js"></script>
@@ -461,7 +461,7 @@ if(location.host.indexOf('.local') > -1){
         listener();
       });
     });
-    
+
     function registerReadyListener(listener) {
       if (goodmoves) {
         listener();
