--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -16,70 +16,71 @@
   ███████║╚██████╗ ╚████╔╝ ╚██████╔╝██╔╝ ██║  ██║╚██████╔╝╚██████╔╝   ██║   ███████╗██║  ██║
   ╚══════╝ ╚═════╝  ╚═══╝   ╚═════╝ ╚═╝  ╚═╝  ╚═╝ ╚═════╝  ╚═════╝    ╚═╝   ╚══════╝╚═╝  ╚═╝
 
--->
+  -->
 
-<link rel="shortcut icon" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon.ico">
-<link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-16x16.png">
-<link rel="manifest" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/manifest.json">
-<meta name="msapplication-TileColor" content="#3c7524">
-<meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/ms-icon-144x144.png">
-<meta name="theme-color" content="#3c7524">
-<link rel="search" type="application/opensearchdescription+xml" title="Goodmoves" href="/assets/opensearch.xml" />
+  <link rel="shortcut icon" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon.ico">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/favicon-16x16.png">
+  <link rel="manifest" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/manifest.json">
+  <meta name="msapplication-TileColor" content="#3c7524">
+  <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/ms-icon-144x144.png">
+  <meta name="theme-color" content="#3c7524">
+  <link rel="search" type="application/opensearchdescription+xml" title="Goodmoves" href="/assets/opensearch.xml" />
 
-<!-- <link rel="canonical" href="https://goodmoves.com{{request.params.uri.pathname}}" /> -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-6"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
+  <!-- <link rel="canonical" href="https://goodmoves.com{{request.params.uri.pathname}}" /> -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-6"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-// NEEDS TO BE SET UP WITH THE CORRECT TRACKING ID
-gtag('config', 'UA-3467930-6', {
-  'send_page_view': true,
-  'anonymize_ip': true,
-  'cookieDomain': 'none',
-  'custom_map': {
-    'dimension1': 'hit_type',
-    'dimension2': 'parent_document'
+  // NEEDS TO BE SET UP WITH THE CORRECT TRACKING ID
+  gtag('config', 'UA-3467930-6', {
+    'send_page_view': true,
+    'anonymize_ip': true,
+    'cookieDomain': 'none',
+    'custom_map': {
+      'dimension1': 'hit_type',
+      'dimension2': 'parent_document'
+    }
+  });
+
+  {{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
+  console.log('#### DEBUG MODE ON ####');
+  console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  {{#if errors.[0]}}
+    console.error('Task Errors:', {{{regexReplace (regexReplace (stringify errors) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+  {{/if}}
+  {{/ifAny ~}}
+  </script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
+  <!--<link type="text/css" rel="stylesheet" href="/assets/css/goodmoves-styles.css">-->
+  <!-- <link type="text/css" rel="stylesheet" href="/assets/goodmoves/main.css"> -->
+  <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main.css">
+  <script>
+  if(location.host.indexOf('.local') > -1){
+    //document.write('<script src="https://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
   }
-});
-
-{{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
-console.log('#### DEBUG MODE ON ####');
-console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-{{#if errors.[0]}}
-  console.error('Task Errors:', {{{regexReplace (regexReplace (stringify errors) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-{{/if}}
-{{/ifAny ~}}
-</script>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-  crossorigin=""/>
-<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
-<!--<link type="text/css" rel="stylesheet" href="/assets/css/goodmoves-styles.css">-->
-<link type="text/css" rel="stylesheet" href="/assets/goodmoves/main.css">
-<script>
-if(location.host.indexOf('.local') > -1){
-  //document.write('<script src="https://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-}
-</script>
+  </script>
 </head>
 <body class="mdc-theme--site-bg {{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
   <goodmoves-site>
@@ -444,7 +445,8 @@ if(location.host.indexOf('.local') > -1){
       data-cookie="CookieInfoScript"
       data-text-align="left"
       ></script>-->
-  <script type="text/javascript" src="/assets/goodmoves/main.js"></script>
+  <!-- <script type="text/javascript" src="/assets/goodmoves/main.js"></script> -->
+  <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main.js"></script>
   <script>
     var goodmoves = null; readyListeners = [];
     $(document).ready(function() {
