Get Involved fix

--- a/sites/configurations/getinvolved/partials/opportunity/key-info.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/key-info.hbs
@@ -3,7 +3,7 @@
   <div class="mdc-card__info--opportunity">
     {{#if organisation.has_logo ~}}
     <div class="mdc-card__media mdc-card__media--organisation pull-right">
-      <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}">
+      <a href="/organisation/{{organisation_slug}}{{@root.request.url.search}}">
         <img src="{{organisation.logo_url}}" alt="{{organisation.name}}" />
       </a>
     </div>
@@ -24,7 +24,7 @@
     <ul class="fa-ul organisation">
       <li class="mdc-card__info--opportunity-organisation mdc-typography--body1">
         <span class="fa-li"><span class="far fa-building fa-fw" title="Organisation"></span></span>
-        <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}">{{organisation.name}}</a>
+        <a href="/organisation/{{organisation_slug}}{{@root.request.url.search}}">{{organisation_name}}</a>
       </li>
     </ul>
     <!-- <div class="mdc-layout-grid hide-md hide-lg">
