--- a/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
@@ -8,52 +8,52 @@
           {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone content sidebar-content">
-          <h3 class="blogs">Case studies</h3>
-          <div class="mdc-card">
+          <h3 class="blogs">Testimonials</h3>
+          <div class="mdc-card" style="margin-bottom:.5rem;">
             <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large v-margin-full">
-                <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/" class="mdc-theme--on-primary">Craig Wilson of Big Hearts</a>
+              <h1 class="mdc-card__title mdc-card__title--large">
+                <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/" class="mdc-theme--on-primary">Craig Wilson</a>
               </h1>
             </section>
             <section class="mdc-card__media">
               <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.png" class="responsive">
+                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
               </a>
             </section>
           </div>
-          <div class="mdc-card">
+          <div class="mdc-card" style="margin-bottom:.5rem;">
             <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large v-margin-full">
-                <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/" class="mdc-theme--on-primary">Biddy Kelly of Fresh Start</a>
+              <h1 class="mdc-card__title mdc-card__title--large">
+                <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/" class="mdc-theme--on-primary">Biddy Kelly</a>
               </h1>
             </section>
             <section class="mdc-card__media">
               <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/fresh-start.png" class="responsive">
+                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/fresh-start.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
               </a>
             </section>
           </div>
-          <div class="mdc-card">
+          <div class="mdc-card" style="margin-bottom:.5rem;">
             <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large v-margin-full">
-                <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/" class="mdc-theme--on-primary">Jane Griffin of LGBT Youth Scotland</a>
+              <h1 class="mdc-card__title mdc-card__title--large">
+                <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/" class="mdc-theme--on-primary">Jane Griffin</a>
               </h1>
             </section>
             <section class="mdc-card__media">
               <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.png" class="responsive">
+                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
               </a>
             </section>
           </div>
-          <div class="mdc-card">
+          <div class="mdc-card" style="margin-bottom:.5rem;">
             <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large v-margin-full">
-                <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/" class="mdc-theme--on-primary">Justina Murray of Scottish Families affected by Alcohol and Drugs</a>
+              <h1 class="mdc-card__title mdc-card__title--large">
+                <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/" class="mdc-theme--on-primary">Justina Murray</a>
               </h1>
             </section>
             <section class="mdc-card__media">
               <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.png" class="responsive">
+                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
               </a>
             </section>
           </div>
